# peerlens

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_gif.py  capture_assets.py
src/peerlens/: __init__.py  cli.py  config.py  main.py
src/peerlens/api/: router.py
src/peerlens/api/routes/: __init__.py  ask.py  health.py  papers.py
src/peerlens/core/: __init__.py  exceptions.py
src/peerlens/models/: __init__.py  context.py  schemas.py
src/peerlens/services/: reports.py
src/peerlens/services/ingestion/: __init__.py  arxiv.py  crossref.py  identifiers.py  pdf.py  pdf_fetch.py
src/peerlens/services/rag/: cache.py  chunking.py  llm.py  qa.py  retrieval.py
src/peerlens/services/signals/: __init__.py  artifacts.py  base.py  metadata.py  reproducibility.py  retraction.py
tests/: test_arxiv.py  test_ask_api.py  test_health.py  test_identifiers.py  test_integration.py  test_pdf_signals.py  test_rag.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: analyze-section.tsx  ask-panel.tsx  background-mesh.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  paper-card.tsx  report-view.tsx  signal-card.tsx
web/src/lib/: api.ts
web/src/types/: api.ts
